terraform/04-aks/k8s-manifests/istio-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: platform-api-authz
  namespace: platform
spec:
  selector:
    matchLabels:
      app: platform-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/platform/sa/platform-worker
              - cluster.local/ns/ingress-nginx/sa/ingress-nginx
      to:
        - operation:
            methods: ["GET", "POST", "PUT", "DELETE"]
            paths: ["/api/*"]
    - from:
        - source:
            principals:
              - cluster.local/ns/monitoring/sa/prometheus
      to:
        - operation:
            methods: ["GET"]
            paths: ["/metrics"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all-default
  namespace: platform
spec:
  {}
